<resources>
    <string name="app_name">Cooking Premium</string>
    <string name="action_settings">Settings</string>
    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved cuz empty entry.</string>
    <string name="menu_login">menu</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="steps">Steps</string>
    <string name="category">Category</string>
    <string name="name_recipe">Name of recipe</string>
    <string name="step_image">step picture</string>
    <string name="step_detail">Step detail</string>
    <string name="time_of_cooking">laps of cooking</string>
    <string name="ustensils">Ustensils</string>
    <string name="author">Author</string>
    <string name="date_of_publish">Date of publish</string>
    <string name="date_of_update">Date of update</string>
</resources>
