<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"

    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- thumbnail -->
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            />

        <!-- legend -->
        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:background="@color/cardview_light_background">

            <TextView
                android:id="@+id/title_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:fontFamily="sans-serif"
                android:padding="20dp"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/name_recipe" />

            <TextView
                android:id="@+id/country"
                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:fontFamily="sans-serif"
                android:padding="20dp"
                android:textAlignment="viewEnd"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:text="@string/category" />

        </android.support.v7.widget.GridLayout>

        <TextView
            android:id="@+id/nb_persons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:fontFamily="sans-serif"
            android:padding="20dp"
            android:textAlignment="viewStart"
            android:textColor="#333"
            android:textSize="18sp"
            tools:text="@string/time_of_cooking" />

    </LinearLayout>


</android.support.v7.widget.CardView>
