<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jon.ldnr.myrecipiesapp.RecipeViewDetail">



    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/content_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!-- card -->
        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="50dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:id="@+id/content_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:padding="10dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="@string/name_recipe" />

                <TextView
                    android:id="@+id/label_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:paddingStart="10dp"
                    android:paddingBottom="0dp"
                    android:text="@string/category"
                    android:textAlignment="viewStart"
                    android:textSize="8sp" />

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:paddingStart="10dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="20dp"
                    android:text="Dessert"
                    android:textAlignment="viewStart"
                    android:textFontWeight="bold"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/label_ustensils"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:paddingStart="10dp"
                    android:paddingBottom="0dp"
                    android:text="@string/ustensils"
                    android:textAlignment="viewStart"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/ustensils"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:paddingStart="10dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="20dp"
                    android:text="couteau"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textFontWeight="bold"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/label_time_of_cooking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:paddingStart="10dp"
                    android:paddingBottom="0dp"
                    android:text="@string/time_of_cooking"
                    android:textAlignment="viewStart"
                    android:textSize="8sp" />

                <TextView
                    android:id="@+id/time_of_cooking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="bol"
                    android:background="?android:selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:paddingStart="10dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="20dp"
                    android:text="30 min"
                    android:textAlignment="viewStart"
                    android:textSize="14sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

    <!-- Detail of step -->
    <LinearLayout
        android:id="@+id/step_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_step"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/detail_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/step_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="1"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary"
                android:textFontWeight="bold"
                android:textSize="44sp" />

            <TextView
                android:id="@+id/step_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="mon decriptif de l étape"
                android:textAlignment="viewStart"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>
